Changes to be committed: 	modified:   angular.json

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>WebApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>PCAS2 Project Page</title>
+    <base href="./">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+
+<body style="max-width: 1200pt; height: 1500pt;">
+    <div style="background-color: rgb(53, 78, 54);  height: 100%;margin: -10pt; ">
+        <app-root></app-root>
+    </div>
 </body>
+
 </html>
